# integrated-info-decomp

./: .gitignore  README.rst  pyproject.toml
.github/workflows/: docs.yml  tests.yml
docs/: api.rst  requirements.txt
phyid/: calculate.py  measures.py  utils.py
phyid/tests/: test_calculate.py  test_measures.py  test_utils.py
